# STM32-ST7789-LVGL

./: .cproject  .mxproject  .project  STM32F411_ST7789_LVGL_Watch Debug.launch  STM32F411_ST7789_LVGL_Watch.ioc
Core/Src/: main.c  stm32f4xx_it.c
Debug/: STM32F411_ST7789_LVGL_Watch.elf  STM32F411_ST7789_LVGL_Watch.map  makefile  objects.list  sources.mk
Debug/Core/Src/: main.cyclo  main.d  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_it.d  subdir.mk
Debug/Drivers/STM32F4xx_HAL_Driver/Src/: subdir.mk
Debug/LVGL_Library/ui/: subdir.mk  ui.cyclo  ui.d  ui.su  ui_helpers.cyclo  ui_helpers.d  ui_helpers.su
Debug/LVGL_Library/ui/images/: subdir.mk  ui_img_cloud_png.d  ui_img_flash1_png.d  ui_img_sun_icon_png.d  ui_img_weather_png.d
Debug/LVGL_Library/ui/screens/: subdir.mk  ui_Calendar_Menu.cyclo  ui_Calendar_Menu.d  ui_Calendar_Menu.su  ui_Date_Settings_Menu.cyclo  ui_Date_Settings_Menu.d  ui_Date_Settings_Menu.su  ui_Main.cyclo  ui_Main.d  ui_Main.su  ui_Time_Settings_Menu.cyclo  (+5 more)
Debug/ST7789_LVGL/Src/: ST7789.cyclo  ST7789.d  ST7789.su  fonts.d  subdir.mk
LVGL_Library/: lv_conf.h  lv_drv_conf.h
LVGL_Library/lvgl/src/: lv_conf_internal.h
LVGL_Library/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
LVGL_Library/ui/images/: ui_img_cloud_png.c  ui_img_flash1_png.c  ui_img_sun_icon_png.c  ui_img_weather_png.c
LVGL_Library/ui/screens/: ui_Calendar_Menu.c  ui_Date_Settings_Menu.c  ui_Main.c  ui_Time_Settings_Menu.c  ui_Weather_Menu.c
ST7789_LVGL/Inc/: ST7789.h  fonts.h
ST7789_LVGL/Src/: ST7789.c  fonts.c
(+405 files in other folders)
